Prepare server integration tests